--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title Chris McMillan Techstart portfolio
-description Techstart Projects
+title: Chris McMillan Techstart portfolio
+description: Techstart Projects
